adjusted spacing issue of the menu button on 768px tablet view. finalized tablet facing page view as well as sidebar

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -202,7 +202,7 @@ div.container.col-xs-11.col-centered {}
   .masthead, .mastfoot, .cover-container {width:100%; /* Must be percentage or pixels for horizontal alignment */}
   .navbar-inverse .navbar-brand {float:left;}
   .navbar-text {float:left; margin:18px 35px 15px 0;}
-  .navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:active, .navbar-inverse .navbar-toggle:focus {float:left; display:block; margin:0;padding:9px 11px;border-color:transparent;margin:20px 10px;background:transparent;}
+  .navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:active, .navbar-inverse .navbar-toggle:focus {float:left; display:block; margin:0; padding:9px 11px; border-color:transparent; margin:18px 10px; background:transparent;}
   .container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {margin-left:-15px; margin-right:20px;}
   .col-centered{margin:10px auto;}
 
